<resources>
    <string name="app_name">Assignment</string>
    <string name="let_s_get_s">
I have...
</string>

    <string name="no_experien">

No experience with music theory
</string>

    <string name="some_experi">

Some experience with music theory
</string>

    <string name="considerabl">

Considerable experience with music theory
</string>
    <string name="welcome_bac">

Welcome back!
</string>

    <string name="log_in_with">

Log in with your email and password
</string>

    <string name="log_in">

Log in
</string>


</resources>
