<?xml version="1.0" encoding="utf-8"?>
<!--change to constraint layout-->
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_diff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/select_diff"
    tools:context=".SelectDifficulty">

    <TextView
        android:id="@+id/let_s_get_s"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/let_s_get_s"
        android:textAppearance="@style/let_s_get_s"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <TextView
        android:id="@+id/no_experien"
        android:layout_width="176dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:text="@string/no_experien"
        android:textAppearance="@style/no_experien"
        android:textColor="#B9B4B4"
        app:layout_constraintStart_toStartOf="@+id/let_s_get_s"
        app:layout_constraintTop_toBottomOf="@+id/let_s_get_s" />

    <!--    change tag-->
    <Button
        android:id="@+id/beginner"
        android:layout_width="265dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:background="@drawable/beginner_re"
        android:text="BEGINNER"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/no_experien"
        app:layout_constraintTop_toBottomOf="@+id/no_experien" />
    <!--       text added myself-->

    <TextView
        android:id="@+id/some_experi"
        android:layout_width="191dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="@string/some_experi"
        android:textAppearance="@style/some_experi"
        app:layout_constraintStart_toStartOf="@+id/beginner"
        app:layout_constraintTop_toBottomOf="@+id/beginner" />

    <Button
        android:id="@+id/intermediate"
        android:layout_width="265dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/intermediate"
        android:text="INTERMEDIATE"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/some_experi"
        app:layout_constraintTop_toBottomOf="@+id/some_experi" />

    <TextView
        android:id="@+id/considerabl"
        android:layout_width="230dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="@string/considerabl"
        android:textAppearance="@style/considerabl"
        app:layout_constraintStart_toStartOf="@+id/intermediate"
        app:layout_constraintTop_toBottomOf="@+id/intermediate" />

    <Button
        android:id="@+id/advanced"
        android:layout_width="265dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/advanced_re"
        android:text="ADVANCED"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/considerabl"
        app:layout_constraintTop_toBottomOf="@+id/considerabl" />

</androidx.constraintlayout.widget.ConstraintLayout>

