<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Login screen"-->
    <!--        android:textSize="24sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.553"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.314" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/email"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="116dp"-->
    <!--        android:layout_marginLeft="116dp"-->
    <!--        android:layout_marginTop="76dp"-->
    <!--        android:ems="10"-->
    <!--        android:inputType="textEmailAddress"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->


    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="64dp"
        android:gravity="center_vertical"
        android:text="@string/welcome_bac"
        android:textAppearance="@style/welcome_bac"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/log_in_with"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/log_in_with"
        android:textAppearance="@style/log_in_with"
        app:layout_constraintStart_toStartOf="@+id/welcome_bac"
        app:layout_constraintTop_toBottomOf="@+id/welcome_bac" />

    <Button
        android:id="@+id/button"
        android:layout_width="265dp"
        android:layout_height="38dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/log_in_rect"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginTop="191dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.186" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        app:srcCompat="@drawable/light_dark_logo" />

    <EditText
        android:id="@+id/email"
        style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
        android:layout_width="314dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/log_in_with"
        app:layout_constraintTop_toBottomOf="@+id/log_in_with" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="314dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <!--    <TextView-->
    <!--        android:id="@+id/name"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="98dp"-->
    <!--        android:text="Name"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/textView"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:layout_editor_absoluteX="122dp" />-->

    <!--    <Button-->
    <!--        android:id="@+id/logout"-->
    <!--        android:layout_width="290dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginLeft="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginRight="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:adjustViewBounds="true"-->
    <!--        android:background="#3BA4FF"-->
    <!--        android:maxWidth="100dp"-->
    <!--        android:maxHeight="100dp"-->
    <!--        android:scaleType="fitXY"-->
    <!--        android:text="logout"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.495"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/email"-->
    <!--        app:layout_constraintVertical_bias="0.866" />-->


    <!--    <Button-->
    <!--        android:id="@+id/enter"-->
    <!--        android:layout_width="290dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginStart="60dp"-->
    <!--        android:layout_marginLeft="60dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginRight="8dp"-->
    <!--        android:layout_marginBottom="13dp"-->
    <!--        android:adjustViewBounds="true"-->
    <!--        android:background="#3BA4FF"-->
    <!--        android:maxWidth="100dp"-->
    <!--        android:maxHeight="100dp"-->
    <!--        android:scaleType="fitXY"-->
    <!--        android:text="enter"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/logout"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/email"-->
    <!--        app:layout_constraintVertical_bias="1.0" />-->


</androidx.constraintlayout.widget.ConstraintLayout>